--- a/project1/webapp/view/BranchData.view.xml
+++ b/project1/webapp/view/BranchData.view.xml
@@ -5,13 +5,19 @@
     xmlns:core="sap.ui.core"
     xmlns:fb="sap.ui.comp.filterbar"
     displayBlock="true"
-    height="100%"
     busyIndicatorDelay="0"
 >
-    <Page showHeader="true">
+    <Page
+        showHeader="true"
+        class="sapUiContentPadding"
+    >
         <headerContent>
-			<core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
-		</headerContent>
+            <core:Fragment
+                fragmentName="sap.ui.com.project1.fragment.Header"
+                type="XML"
+            />
+        </headerContent>
+
         <content>
             <fb:FilterBar
                 id="MD_id_Filterbar"
@@ -34,11 +40,14 @@
                             <ComboBox
                                 id="MD_id_BranchCode"
                                 items="{mainModel>/}"
+                                showSecondaryValues="true"
                                 showClearIcon="true"
+                                width="100%"
                             >
-                                <core:Item
+                                <core:ListItem
                                     key="{mainModel>BranchID}"
                                     text="{mainModel>BranchID}"
+                                    additionalText="{mainModel>Name}"
                                 />
                             </ComboBox>
                         </fb:control>
@@ -57,6 +66,7 @@
                                 id="MD_id_Pincode"
                                 items="{mainModel>/}"
                                 showClearIcon="true"
+                                width="100%"
                             >
                                 <core:ListItem
                                     key="{mainModel>Pincode}"
@@ -69,15 +79,14 @@
             </fb:FilterBar>
             <Table
                 id="id_MD_Table"
-                sticky="ColumnHeaders,HeaderToolbar"
                 mode="MultiSelect"
-                width="auto"
+                sticky="ColumnHeaders,HeaderToolbar"
                 growing="true"
                 growingThreshold="100"
-                selectionChange="MC_onTableSelectionChange"
                 alternateRowColors="true"
-                class="sapUiResponsiveMargin"
-                items="{path: 'mainModel>/'}"
+                selectionChange="MC_onTableSelectionChange"
+                class="sapUiTinyMarginTop"
+                items="{mainModel>/}"
             >
                 <headerToolbar>
                     <OverflowToolbar>
@@ -85,28 +94,26 @@
                             text="Branch Details ({= ${mainModel>/}.length})"
                         />
                         <ToolbarSpacer />
+
                         <Button
                             text="Add"
                             press="MD_AddButtonPress"
                             type="Accept"
-                            id="MC_id_AddCustomer"
                         />
                         <Button
                             text="Edit"
                             press="MD_UpdateTableRow"
                             type="Ghost"
-                            id="MC_id_EditCustomer"
                         />
                         <Button
                             text="Delete"
                             press="MD_DeleteRow"
                             type="Reject"
-                            id="MC_id_DeleteCustomer"
                         />
                         <Button
+                            text="Download"
                             press="MD_onDownload"
                             type="Transparent"
-                            text="Download"
                         />
                     </OverflowToolbar>
                 </headerToolbar>
@@ -115,34 +122,44 @@
                     <Column demandPopin="true">
                         <Text text="Branch Code" />
                     </Column>
-                    <Column demandPopin="true">
+
+                    <Column
+                        demandPopin="true"
+                        minScreenWidth="Tablet"
+                    >
                         <Text text="Branch Name" />
                     </Column>
+
                     <Column
-                        minScreenWidth="Tablet"
                         demandPopin="true"
+                        minScreenWidth="Tablet"
                     >
                         <Text text="Address" />
                     </Column>
+
                     <Column
-                        minScreenWidth="Tablet"
                         demandPopin="true"
+                        minScreenWidth="Tablet"
                     >
                         <Text text="Pin Code" />
                     </Column>
+
                     <Column
-                        minScreenWidth="Tablet"
                         demandPopin="true"
+                        minScreenWidth="Tablet"
                     >
                         <Text text="Contact Number" />
                     </Column>
-                    <Column>
-                        <Text text="Country"/>
+
+                    <Column demandPopin="true">
+                        <Text text="Country" />
                     </Column>
-                    <Column>
+
+                    <Column demandPopin="true">
                         <Text text="State" />
                     </Column>
-                    <Column>
+
+                    <Column demandPopin="true">
                         <Text text="City" />
                     </Column>
                 </columns>
@@ -154,8 +171,8 @@
                             <Text text="{mainModel>Name}" />
                             <Text text="{mainModel>Address}" />
                             <Text text="{mainModel>Pincode}" />
-                            <Text text="{mainModel>STD} {mainModel>Contact}"/> 
-                            <Text text="{mainModel>Country}"/>
+                            <Text text="{mainModel>STD} {mainModel>Contact}" />
+                            <Text text="{mainModel>Country}" />
                             <Text text="{mainModel>State}" />
                             <Text text="{mainModel>City}" />
                         </cells>
