Enhance Facilities management: add price fields for hourly, daily, monthly, and yearly rates; update currency handling and validation logic

--- a/project1/webapp/view/FacilitiesDetails.view.xml
+++ b/project1/webapp/view/FacilitiesDetails.view.xml
@@ -1,42 +1,41 @@
 <mvc:View
     controllerName="sap.ui.com.project1.controller.FacilitiesDetails"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns:m="sap.m"
-    xmlns:suite="sap.suite.ui.commons"
-    xmlns="sap.uxap"
-    xmlns:uxap="sap.uxap"
-    xmlns:richtexteditor="sap.ui.richtexteditor"
-    xmlns:layout="sap.ui.layout"
-    xmlns:f="sap.ui.layout.form"
-    xmlns:c="sap.ui.core"
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:m="sap.m"
+	xmlns:suite="sap.suite.ui.commons"
+	xmlns="sap.uxap"
+	xmlns:uxap="sap.uxap"
+	xmlns:richtexteditor="sap.ui.richtexteditor"
+	xmlns:layout="sap.ui.layout"
+	xmlns:f="sap.ui.layout.form"
+	xmlns:c="sap.ui.core"
     displayBlock="true"
     height="100%"
-    xmlns:core="sap.ui.core"
+	xmlns:core="sap.ui.core"
     busyIndicatorDelay="0"
-    xmlns:u="sap.ui.unified"
->
-    <m:Page
+	xmlns:u="sap.ui.unified">
+	<m:Page
         navButtonPress="BI_onButtonPress"
         showNavButton="true"
         title="Facility Details"
     >
-        <m:headerContent>
-            <core:Fragment
+		<m:headerContent>
+			<core:Fragment
                 fragmentName="sap.ui.com.project1.fragment.Header"
                 type="XML"
             />
-        </m:headerContent>
-        <ObjectPageLayout id="FD_id_ObjectPageLayout">
-            <sections>
-                <ObjectPageSection
+		</m:headerContent>
+		<ObjectPageLayout id="FD_id_ObjectPageLayout">
+			<sections>
+				<ObjectPageSection
                     titleUppercase="false"
                     id="FD_id_OrderHeaderSection1"
                     title="Facility Information"
                 >
-                    <subSections>
-                        <ObjectPageSubSection id="FD_id_dsd1">
-                            <blocks>
-                                <f:SimpleForm
+					<subSections>
+						<ObjectPageSubSection id="FD_id_dsd1">
+							<blocks>
+								<f:SimpleForm
                                     id="FD_id_simpleCompanyDetails"
                                     busyIndicatorDelay="0"
                                     editable="true"
@@ -55,13 +54,13 @@
                                     columnsM="2"
                                     singleContainerFullSize="false"
                                 >
-                                    <f:content>
-                                        <!-- Branch Code -->
-                                        <m:Label
+									<f:content>
+										<!-- Branch Code -->
+										<m:Label
                                             text="Branch Code"
                                             required="true"
                                         />
-                                        <m:ComboBox
+										<m:ComboBox
                                             id="FD_id_RoomType123"
                                             placeholder="Select branch Code"
                                             selectedKey="{FacilitiesModel>/BranchCode}"
@@ -71,18 +70,18 @@
                                             valueStateText="{i18n>selectBranchCode}"
                                             editable="{editable>/Edit}"
                                         >
-                                            <core:ListItem
+											<core:ListItem
                                                 key="{BranchModel>BranchID}"
                                                 text="{BranchModel>BranchID}"
                                                 additionalText="{BranchModel>Name}"
                                             />
-                                        </m:ComboBox>
-                                        <!-- Facility Name -->
-                                        <m:Label
+										</m:ComboBox>
+										<!-- Facility Name -->
+										<m:Label
                                             text="Facility Name"
                                             required="true"
                                         />
-                                        <m:Input
+										<m:Input
                                             id="FD_id_FacilityName"
                                             value="{FacilitiesModel>/FacilityName}"
                                             placeholder="Enter Facility Name"
@@ -91,12 +90,12 @@
                                             valueStateText="{i18n>enterFacilityName}"
                                             editable="{editable>/Edit}"
                                         />
-                                        <!-- Type -->
-                                        <m:Label
+										<!-- Type -->
+										<m:Label
                                             text="Type"
                                             required="true"
                                         />
-                                        <m:ComboBox
+										<m:ComboBox
                                             id="FD_id_FacilityName1"
                                             items="{FacilityType>/}"
                                             placeholder="Enter Type"
@@ -106,46 +105,25 @@
                                             valueStateText="{i18n>enterFacilityType}"
                                             editable="{editable>/Edit}"
                                         >
-                                            <core:Item
+											<core:Item
                                                 key="{FacilityType>ID}"
                                                 text="{FacilityType>FacilityName}"
                                             />
-                                        </m:ComboBox>
-                                        <!-- Price + Unit -->
-                                        <m:Label
-                                            text="Price"
-                                            required="true"
-                                        />
-                                        <m:Input
-                                            id="FD_id_Price"
-                                            value="{FacilitiesModel>/Price}"
-                                            placeholder="Enter Price"
-                                            maxLength="10"
-                                            liveChange=".onFacilityPriceChange"
-                                            valueStateText="{i18n>enterFacilityPrice}"
-                                            editable="{editable>/Edit}"
-                                        />
-                                        <m:ComboBox
-                                            id="FD_id_Rate"
-                                            items="{RateType>/}"
-                                            selectedKey="Per Day"
-                                            value="{FacilitiesModel>/UnitText}"
-                                            change=".onFacilityRateChange"
-                                            width="100%"
-                                            valueStateText="{i18n>selectRateType}"
-                                            editable="{editable>/Edit}"
-                                        >
-                                            <core:Item
-                                                key="{RateType>ID}"
-                                                text="{RateType>RateType}"
-                                            />
-                                        </m:ComboBox>
-                                        <!-- Currency -->
-                                        <m:Label
+										</m:ComboBox>
+										<m:Label text="Hourly Price" />
+										<m:Input id="FD_id_PerHourPrice" placeholder="Enter Per Hour Price" value="{FacilitiesModel>/PerHourPrice}" maxLength="10" editable="{editable>/Edit}" liveChange="onPriceChange"/>
+										<m:Label text="Daily Price"/>
+										<m:Input id="FD_id_PerDayPrice" placeholder="Enter Per Day Price" value="{FacilitiesModel>/PerDayPrice}" maxLength="10" editable="{editable>/Edit}" liveChange="onPriceChange"/>
+										<m:Label text="Monthly Price"/>
+										<m:Input id="FD_id_PerMonthPrice" placeholder="Enter Per Month Price" value="{FacilitiesModel>/PerMonthPrice}" maxLength="10" editable="{editable>/Edit}" liveChange="onPriceChange"/>
+										<m:Label text="Yearly Price"/>
+										<m:Input id="FD_id_PerYearPrice" placeholder="Enter Per Year Price"  value="{FacilitiesModel>/PerYearPrice}"  maxLength="10" editable="{editable>/Edit}" liveChange="onPriceChange"/>
+										<!-- Currency -->
+										<m:Label
                                             text="Currency"
                                             required="true"
                                         />
-                                        <m:ComboBox
+										<m:ComboBox
                                             id="FD_id_Currency"
                                             selectedKey="{FacilitiesModel>/Currency}"
                                             items="{CurrencyModel>/}"
@@ -155,26 +133,25 @@
                                             placeholder="Select Currency"
                                             editable="{editable>/Edit}"
                                         >
-                                            <c:Item
+											<c:Item
                                                 key="{CurrencyModel>currency}"
                                                 text="{CurrencyModel>currency}"
                                             />
-                                        </m:ComboBox>
-                                    </f:content>
-                                </f:SimpleForm>
-                            </blocks>
-                        </ObjectPageSubSection>
-                    </subSections>
-                </ObjectPageSection>
-                <ObjectPageSection
+										</m:ComboBox>
+									</f:content>
+								</f:SimpleForm>
+							</blocks>
+						</ObjectPageSubSection>
+					</subSections>
+				</ObjectPageSection>
+				<ObjectPageSection
                     titleUppercase="false"
                     id="FD_id_rderSection"
-                    title="Images"
-                >
-                    <subSections>
-                        <ObjectPageSubSection id="FD_id_ordersection">
-                            <blocks>
-                                <m:HBox
+                    title="Images">
+					<subSections>
+						<ObjectPageSubSection id="FD_id_ordersection">
+							<blocks>
+								<m:HBox
                                     id="FD_id_ImagesContainer"
                                     wrap="Wrap"
                                     justifyContent="Start"
@@ -182,23 +159,22 @@
                                     class="sapUiSmallMargin"
                                     items="{DisplayImagesModel>/DisplayImages}"
                                 >
-                                    <m:VBox
+									<m:VBox
                                         class="sapUiSmallMarginEnd sapUiSmallMarginBottom"
                                         width="150px"
                                         alignItems="Center"
                                         justifyContent="Center"
                                     >
-                                        <!-- Normal Image Display -->
-                                        <m:Image
+										<!-- Normal Image Display -->
+										<m:Image
                                             src="{DisplayImagesModel>src}"
                                             width="120px"
                                             height="120px"
                                             press="onImagePress"
                                             visible="{= ${DisplayImagesModel>isPlaceholder} === false }"
                                         />
-
-                                        <!-- Placeholder Box (visible only when no image) -->
-                                        <m:VBox
+										<!-- Placeholder Box (visible only when no image) -->
+										<m:VBox
                                             visible="{= ${DisplayImagesModel>isPlaceholder} === true &amp;&amp; ${editable>/Edit} === true }"
                                             width="120px"
                                             height="120px"
@@ -206,7 +182,7 @@
                                             justifyContent="Center"
                                             class="placeholderBox"
                                         >
-                                            <u:FileUploader
+											<u:FileUploader
                                                 icon="sap-icon://add"
                                                 width="120px"
                                                 style="Transparent"
@@ -217,10 +193,9 @@
                                                 visible="{= ${DisplayImagesModel>isPlaceholder} === true &amp;&amp; ${editable>/Edit} === true }"
                                                 change=".onFileSelected"
                                             />
-                                        </m:VBox>
-   
-                                        <!-- Delete icon -->
-                                        <m:Button
+										</m:VBox>
+										<!-- Delete icon -->
+										<m:Button
                                             icon="sap-icon://delete"
                                             type="Reject"
                                             visible="{= ${editable>/Edit} === true &amp;&amp; ${DisplayImagesModel>isPlaceholder} === false }"
@@ -228,33 +203,33 @@
                                             tooltip="Delete Image"
                                             width="100%"
                                         />
-                                    </m:VBox>
-                                </m:HBox>
-                            </blocks>
-                        </ObjectPageSubSection>
-                    </subSections>
-                </ObjectPageSection>
-            </sections>
-        </ObjectPageLayout>
-        <m:footer>
-            <m:Bar id="FD_id_FooterBar">
-                <m:contentRight>
-                    <m:Button
+									</m:VBox>
+								</m:HBox>
+							</blocks>
+						</ObjectPageSubSection>
+					</subSections>
+				</ObjectPageSection>
+			</sections>
+		</ObjectPageLayout>
+		<m:footer>
+			<m:Bar id="FD_id_FooterBar">
+				<m:contentRight>
+					<m:Button
                         id="FD_id_editButton"
                         visible="{= !${editable>/Edit} }"
                         text="Edit"
                         type="Transparent"
                         press="BI_onEditButtonPress"
                     />
-                    <m:Button
+					<m:Button
                         id="FD_id_SaveButton"
                         visible="{=${editable>/Edit}}"
                         text="Save"
                         type="Accept"
                         press="BT_onsavebuttonpress"
                     />
-                </m:contentRight>
-            </m:Bar>
-        </m:footer>
-    </m:Page>
+				</m:contentRight>
+			</m:Bar>
+		</m:footer>
+	</m:Page>
 </mvc:View>
